--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "flag-icons": "^6.7.0",
     "framer-motion": "^10.12.22",
@@ -20,7 +21,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
-    "react-router-dom": "^6.14.2"
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
