--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
+    "@svgr/webpack": "^8.0.1",
+    "@types/react-dnd": "^3.0.2",
     "axios": "^1.4.0",
     "flag-icons": "^6.7.0",
     "framer-motion": "^10.12.22",
@@ -19,11 +21,15 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
