--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
     "@svgr/webpack": "^8.0.1",
     "@types/react-dnd": "^3.0.2",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "flag-icons": "^6.7.0",
     "framer-motion": "^10.12.22",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "use-sound": "^4.0.1"
   },
@@ -36,6 +41,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
