--- a/package.json
+++ b/package.json
@@ -24,17 +24,13 @@
     "i18next-http-backend": "^2.2.1",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
-    "react-audio-player": "^0.17.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
-    "redux": "^4.2.1",
-    "use-sound": "^4.0.1"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
