--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dnd": "^3.0.2",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "countapi-js": "^1.0.2",
     "express": "^4.18.2",
     "flag-icons": "^6.7.0",
     "framer-motion": "^10.12.22",
@@ -30,6 +31,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "react-yandex-metrika": "^2.6.0",
     "redux": "^4.2.1"
   },
   "devDependencies": {
